# MediaManagerX

./: .gitignore  BACKLOG.md  CHANGELOG.md  DECISIONS.md  MASTER_BRIEF.md  Makefile  Metadata.md  PHASE1_PLAN.md  README.md  ReleaseNotes.md  build.py  debug_tests.py  fix.ps1  git_log.tmp  git_log.txt  git_log_utf8.txt  installer.iss  pyproject.toml  repro_bug.py  requirements.txt  run.py  setup.cfg  startup_log.txt  startup_log_ascii.txt  temp_log.txt  test_embed.py  test_search.db  test_sw_fallback.py  test_upsert.py  verify_filters.py  verify_fix.py
.codex-ai-tests/: manual.db-journal
.tmp-tests-hashing/: test.db
.tmp-tests-hashing-1404e6c6/: test.db
.tmp-tests-hashing-2029b80c/: test.db
.tmp-tests-hashing-2364ffbe/: test.db
.tmp-tests-hashing-33929b53/: test.db
.tmp-tests-hashing-62190737/: test.db
.tmp-tests-hashing-df3fcea4/: test.db
docs/: AI Agent Collaboration Guide.md  CHANGELOG.md  DECISIONS.md  Instructions.md  Metadata.md  SCHEMA_V1.md  app-bootstrap.md  dev-workflow.md  github-sync.md  masonry-layout.md  media-repo.md  metadata-crud.md  metadata-embedding-windows.md  metadata-map.md  metadata-progress.md  phase1-foundation.md  repository-facade.md  scope-query-contract.md  selection-state.md  tags-crud.md  timeline-followups.md
mediamanagerx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: backfill_ai_metadata.py  build.py  demo_ingest.py  dev_check.py  init_db.py  inspect_ai_metadata.py  push_subtree_branch.sh  setup.py  version_bump.py
tests/: test_choose_columns.py  test_connect.py  test_db_init.py  (+12 more)
(+49 files in other folders)
