[project]
name = "mediamanagerx"
version = "0.1.0"
description = "Local-first media asset manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
mediamanagerx = "native.mediamanagerx_app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
